Laba3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: lab3
spec:
  type: NodePort
  selector:
    app: lab3
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
      protocol: TCP
